# fpgago

./: .gitignore  Makefile  README.md  make.bat  romH.vh  romL.vh  setup.bat  setup.ps1  setup.sh  tutorial-hello-pixels.md
arch/c16/: basic_rom.v  c16.v  gen_ram.v  gen_uart.v  kernal_rom.v  mos8501.v  out.bit  out.config  out.timing  soc.v  (+5 more)
arch/risc2/cpu/llvm-backend/: CMakeLists.txt  HOWTO.txt  RISC2.h  RISC2.td  RISC2AsmPrinter.cpp  RISC2CallingConv.td  RISC2FrameLowering.cpp  RISC2FrameLowering.h  RISC2ISelDAGToDAG.cpp  RISC2ISelDAGToDAG.h  RISC2ISelLowering.cpp  RISC2ISelLowering.h  RISC2InstPrinter.h  RISC2InstrFormats.td  RISC2InstrInfo.cpp  RISC2InstrInfo.h  RISC2InstrInfo.td  RISC2MCInstLower.cpp  RISC2MCInstLower.h  RISC2RegisterInfo.cpp  RISC2RegisterInfo.h  RISC2RegisterInfo.td  RISC2Schedule.td  RISC2Subtarget.cpp  RISC2Subtarget.h  RISC2TargetMachine.cpp  RISC2TargetMachine.h  setup-llvm.sh
arch/risc2/cpu/llvm-backend/MCTargetDesc/: CMakeLists.txt  RISC2InstPrinter.cpp  RISC2InstPrinter.h  RISC2MCAsmInfo.cpp  RISC2MCAsmInfo.h  RISC2MCTargetDesc.cpp  RISC2MCTargetDesc.h
arch/risc2/cpu/llvm-backend/TargetInfo/: CMakeLists.txt  RISC2TargetInfo.cpp  RISC2TargetInfo.h
arch/risc2/cpu/llvm-backend/patches/: tree_modifications.patch
docs/: riscv.txt
peripheral/: audio.v  bootloader.v  dcache.v  ddr3_iface.v  debugger.v  font5x7.h  font_ibm8x16.h  i2s.v  icache.v  interrupt.v  lcd_char.v  lcd_out.v  lcd_sdram.v  lcd_sprite.v  psram.v  psram_iface.v  sdram.v  timer.v  uart.v
util/: ecp5.v  ecp5_simul.v  gcasm-copyarch.sh  gen-risc1-platform.sh  newgame.sh
(+291 files in other folders)
